syntax = "proto3";

package kong.admin.model.v1;

option go_package = "github.com/kong/koko/internal/gen/grpc/kong/admin/model/v1;v1";

message Status {
  string id = 1;
  EntityReference context_reference = 2;
  repeated Condition conditions = 3;
  int32 created_at = 4;
  int32 updated_at = 5;
}

message EntityReference {
  string type = 1;
  string id = 2;
}

message Condition {
  string code = 1;
  string message = 2;
  string severity = 3;
}
